--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "lucide-react": "^0.476.0",
     "mongoose": "^8.11.0",
     "next": "15.2.0",
+    "next-themes": "^0.4.4",
     "openai": "^4.85.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
