--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "commitlint": "commitlint --edit"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.41",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
